--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -3,7 +3,7 @@
 # NOTE: This "production" version only contains differences from _config.yml.
 #       See also _data/site_config_prod.yml in this repository.
 
-baseurl: ""
+baseurl: "/simple-patatas"
 environment: production
 
 analytics:
